overflow scroll fixed

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
 }
 
 .container{
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
 }
 
 h1 {
